Fixing hover histories on tablet

--- a/src/styles/components/_historia.scss
+++ b/src/styles/components/_historia.scss
@@ -143,9 +143,6 @@
 
     @media screen and (max-width: 955px) {
       cursor: default;
-      &:hover {
-        flex: none;
-      }
     }
 
     @media screen and (max-width: 700px) {
